--- a/Documents/BibliografiaAERO.bib
+++ b/Documents/BibliografiaAERO.bib
@@ -1,3 +1,13 @@
+@article{ahmed2015investigation,
+	title={An investigation of performance analysis of anomaly detection techniques for big data in scada systems.},
+	author={Ahmed, Mohiuddin and Anwar, Adnan and Mahmood, Abdun Naser and Shah, Zubair and Maher, Michael J},
+	journal={EAI Endorsed Trans. Indust. Netw. \& Intellig. Syst.},
+	volume={2},
+	number={3},
+	pages={e5},
+	year={2015}
+}
+
 @article{astolfi2016mathematical,
   title={Mathematical methods for SCADA data mining of onshore wind farms: Performance evaluation and wake analysis},
   author={Astolfi, Davide and Castellani, Francesco and Terzi, Ludovico},
@@ -9,6 +19,34 @@
   publisher={SAGE Publications Sage UK: London, England}
 }
 
+@book{boyer2009scada,
+	title={SCADA: supervisory control and data acquisition},
+	author={Boyer, Stuart A},
+	year={2009},
+	publisher={International Society of Automation}
+}
+
+
+@article{chandola2009anomaly,
+	title={Anomaly detection: A survey},
+	author={Chandola, Varun and Banerjee, Arindam and Kumar, Vipin},
+	journal={ACM computing surveys (CSUR)},
+	volume={41},
+	number={3},
+	pages={15},
+	year={2009},
+	publisher={ACM}
+}
+
+
+@article{daneels1999scada,
+	title={What is SCADA?},
+	author={Daneels, Axel and Salter, Wayne},
+	year={1999}
+}
+
+
+
 @inproceedings{lu2009review,
   title={A review of recent advances in wind turbine condition monitoring and fault diagnosis},
   author={Lu, Bin and Li, Yaoyu and Wu, Xin and Yang, Zhongzhou},
@@ -16,6 +54,30 @@
   pages={1--7},
   year={2009},
   organization={IEEE}
+}
+@book{luo2014wind,
+	title={Wind turbine control and monitoring},
+	author={Luo, Ningsu and Vidal, Yolanda and Acho, Leonardo},
+	volume={821},
+	year={2014},
+	publisher={Springer}
+}
+
+@article{gill1967accuracy,
+	title={Accuracy of wind measurements on towers or stacks},
+	author={Gill, Gerald C and Olsson, Lars E and Sela, Josef and Suda, Motozo},
+	journal={Bulletin of the American Meteorological Society},
+	volume={48},
+	number={9},
+	pages={665--675},
+	year={1967},
+	publisher={American Meteorological Society}
+}
+
+@article{hansen1999influence,
+	title={Influence of the meteorology mast on a cup anemometer},
+	author={Hansen, Martin OL and Pedersen, BM},
+	year={1999}
 }
 
 @inproceedings{hasu2006weather,
@@ -28,12 +90,25 @@
   organization={IEEE}
 }
 
+
 @techreport{kim2011use,
   title={Use of SCADA data for failure detection in wind turbines},
   author={Kim, Kyusung and Parthasarathy, Girija and Uluyol, Onder and Foslien, Wendy and Sheng, Shuangwen and Fleming, Paul},
   year={2011},
   institution={National Renewable Energy Lab.(NREL), Golden, CO (United States)}
 }
+
+@article{kondo1971response,
+	title={Response of cup anemometer in turbulence},
+	author={Kondo, Junsei and Naito, Gen-ichi and Fujinawa, Yukio},
+	journal={Journal of the Meteorological Society of Japan. Ser. II},
+	volume={49},
+	number={2},
+	pages={63--74},
+	year={1971},
+	publisher={Meteorological Society of Japan}
+}
+
 
 @article{kusiak2011prediction,
   title={The prediction and diagnosis of wind turbine faults},
@@ -45,6 +120,14 @@
   year={2011},
   publisher={Elsevier}
 }
+
+@techreport{morris1992comparison,
+	title={Comparison of anemometers for turbulence characterization},
+	author={Morris, VR and Barnard, JC and Wendell, LL and Tomich, SD},
+	year={1992},
+	institution={Pacific Northwest Lab., Richland, WA (United States)}
+}
+
 @inproceedings{schlechtingen2012condition,
   title={Condition monitoring with ordinary wind turbine SCADA data--A neuro-fuzzy approach},
   author={Schlechtingen, Meik and Santos, Ilmar},
